<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".UserSubmit" >

    <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name" />

    <EditText
            android:id="@id/editTextUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="your name..."
            android:ems="10" android:layout_alignLeft="@+id/textViewName" android:layout_below="@+id/textViewName"
            android:layout_alignRight="@+id/buttonSubmit">

        <requestFocus />
    </EditText>

    <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_email" android:layout_alignLeft="@+id/textViewName"
            android:layout_alignParentTop="true" android:layout_marginTop="100dp"/>

    <EditText
            android:id="@id/editTextUserEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="example@mail.com"
            android:ems="10"
            android:layout_alignLeft="@+id/textViewName" android:layout_below="@+id/textViewEmail"
            android:layout_alignRight="@id/editTextUserName"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/establishment_name"
            android:id="@+id/textViewEstablishment" android:layout_alignLeft="@+id/textViewName" android:layout_alignParentTop="true"
            android:layout_marginTop="200dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPlaceName"
            android:hint="where are you reviewing?"
            android:layout_alignLeft="@+id/textViewName" android:layout_below="@+id/textViewEstablishment"
            android:layout_alignRight="@id/editTextUserName"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/establishment_type"
            android:id="@+id/textView" android:layout_alignLeft="@+id/textViewName" android:layout_alignParentTop="true"
            android:layout_marginTop="300dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/editTextPlaceType" android:layout_alignLeft="@+id/textViewName"
            android:hint="party, eat, shop"
            android:layout_below="@+id/textView" android:layout_alignRight="@id/editTextUserName"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/establishment_rating"
            android:id="@+id/textView1" android:layout_alignLeft="@+id/textViewName"
            android:layout_alignParentTop="true" android:layout_marginTop="400dp"/>

    <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" android:layout_alignParentBottom="true"
            android:background="@drawable/app_submit_text_250x60"/>
    <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="3"
            android:id="@id/ratingBarInput"
            android:layout_alignLeft="@+id/textViewName" android:layout_below="@+id/textView1"/>

</RelativeLayout>